finalproject/styles/base.css
:root {
    --primary-color: #FFFBF1;
    --secondary-color: #FFF2D0;
    --accent1-color: #ebd671;
    --accent2-color: #FFB2B2;
    --accent3-color: #A34444;
    --accent4-color: #58315F;
    --bkcolor: #AC7D88;
    --bkcolor2: #FAF3E0;
    --heading-font: "Calistoga";
    --body-font: "Work Sans", sans-serif;
}

*,
*::after,
*::before {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    font-family: var(--heading-font);
    background-color: var(--primary-color);
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

header h1 {
    font-size: 1.5rem;
    text-align: center;
    color: var(--accent3-color);
    white-space: nowrap;
}

.left {
    display: flex;
    align-items: center;
    order: 1;
    font-size: 1rem;
    margin-left: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.left .favicon {
    display: block;
    margin-right: 10px;
    width: 30px;
    height: 30px;
    flex-shrink: 0;

}

.undercurly {
    display: none;
}

/* HAMBURGER */

.hamburger {
    background: none;
    border: none;
    color: var(--accent3-color);
    cursor: pointer;
    font-family: Verdana, Geneva, Tahoma, sans-serif;

}

.hamburger::before {
    content: "\2630";
    font-size: 2rem;
}

.hamburger.show::before {
    content: "\00D7";
    font-size: 2rem;
}

/* NAVIGATION */

.navigation {
    order: 3;
    display: none;
}

.navigation.show {
    display: block;
    width: 100%;
}

.navigation ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.navigation a {
    display: block;
    padding: .8rem 10px;
    color: var(--accent3-color);
    text-decoration: none;
    border-bottom: solid 1px #ddd;
}

.navigation li.current {
    background-color: var(--accent4-color);
}

.navigation li.current a{
    color: var(--accent2-color);
}

.navigation li.current a:hover{
    color: var(--secondary-color);
}


/* .navigation li.current::before {
    content: "𓃇";
} */

.navigation a:hover {
    background-color: var(--accent3-color);
    color: var(--secondary-color);
}

/* Hero Image */

.hero-image {
    height: 50vh;
    width: 100%;
    min-height: 320px;
    max-height: 600px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

.hero-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

main {
    /* min-height: 80vh; */
    padding-bottom: 10px;
    margin-bottom: 0;
}

main h2 {
    color: var(--accent3-color);
    text-align: center;
    font-size: 2.5rem;
    padding: 20px;
}

main p,
main li {
    font-family: var(--body-font);
}

/* Footer */

footer {
    display: flex;
    flex-direction: column;
    text-align: center;
    color: var(--accent4-color)
}

footer h2 {
    margin-top: 0;
    padding-top: 20px;
}

footer section {
    justify-content: center;
    text-align: left;
    padding: 20px;
}

footer p {
    font-family: var(--body-font);
}

footer address {
    margin-bottom: 0;
    padding-bottom: 20px;
}

.hidden {
    display: none;
}

.logo {
    display: flex;
    justify-content: center;
    gap: 1.5rem;
}

.last {
    margin-bottom: 0;
    padding-bottom: 20px;
}

.siteplan-main {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.siteplan-main section {
    border: solid 2px var(--accent3-color);
    background-color: var(--secondary-color);
    margin: 10px;
    padding: 10px;
    gap: 10px;
    border-radius: 20px;

}

.right {
    order: 2;
    display: flex;
    align-items: center;
    margin-left: auto;
    margin-right: 20px;
    flex: 1;
    justify-content: flex-end;
    gap: 10px;
}

/* Main */

main section h2 {
    padding: 20px;
}

main section ul {
    padding-left: 30px;
}

/* Index Main */

.index-main section {
    border: solid 2px var(--accent3-color);
    background-color: var(--secondary-color);
    margin: 10px;
    padding: 10px;
    gap: 10px;
    border-radius: 20px;
}

.index-main h3 {
    font-size: 2rem;
    padding: 20px;
    padding-bottom: 10px;
}

.index-main section p {
    font-size: 1.25rem;
    padding: 10px;

}

.history-title {
    color: var(--accent3-color);
}

.index-main section figure {
    padding: 25px;
}

.history-witch {
    float: right;
}

.history-pink {
    float: left;
}


#visits {
    display: block;
    min-height: 1.5rem;
    text-align: center;
    font-size: 1.5rem;
}

/* Houses Main */

.houses-main h2 {
    grid-column: 1/ 3;
}

.houses-main button {
    display: block;
    justify-self: center;
}

/* Home Form */

.join-form{
    border-radius: 20px;
    background-color: var(--accent4-color);
    color: var(--accent2-color);
    padding: 20px;
    margin: 10px;
}
.join-form label {
    display: block;
    margin-left: 15px;
    padding-bottom: 20px;
    padding-top: 20px;
    font-size: 1.5rem;
    font-weight: bold;
}

.join-form fieldset {
    display: inline-block;
    border: none;
}

.join-form .join-button {
    display: block;
    background-color: var(--accent1-color);
    width: 50%;
    border: none;
    border-radius: 15px;
    text-align: center;
    font-size: 24px;
    margin-left: auto;
    margin-right: auto;
}

/* Thank You Page */

.thankyou h1 {
    padding: 60px;
}

.thankyou p {
    padding-left: 80px;
    padding-bottom: 40px;
    margin-left: auto;
    margin-right: auto;
    font-size: 2rem;
    text-align: left;
    margin-bottom: 0;
}

/* House Filter */

.houses-filter nav{
    display: flex;
    justify-content: center;
    gap: 10px;
}

.houses-filter button {
    color: var(--accent1-color );
    background-color: var(--accent4-color);
    font-size: 2rem;
    padding: 20px;
    border-radius: 15px;
    
}

/* Houses Cards */

.hover:hover {
    box-shadow: 0 0 50px #333;
}

#cards {
    grid-template-columns: 1fr;
    min-height: 80vh;
}

#cards section {
    margin: 1rem 8px;
    padding: 1rem 8px;
    border: 3px solid var(--accent3-color);
    background-color: var(--secondary-color);
    border-radius: 8px;
    overflow: hidden;
    display: grid;
    grid-template-areas:
        "name"
        "picture"
        "architect"
        'year'
        "description"
}

#cards section h3 {
    margin: 1rem 10px;
    grid-area: name;
    justify-self: center;
}

#cards section img {
    width: 60%;
    height: auto;
    object-fit: cover;
    grid-area: picture;
    justify-self: center;
    align-items: center;
}

#cards p {
    margin: 1rem 10px;
}

#cards .description {
    grid-area: description;
}

#cards .architect {
    grid-area: architect;
}

#cards .architect::before {
    content: "Architect";
    font-weight: bold;
}

#cards .year {
    grid-area: year;
}

#cards .year::before {
    content: "Year Completed";
    font-weight: bold;
}

/* Architects Main */

/* Architect Cards */

.architect-cards {
    display: flex;
    flex-direction: column;
    padding: 20px;
}

.architect-cards section {
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 15px;
    margin-top: 10px;
    margin-bottom: 0;
    padding-bottom: 20px;
    background-color: var(--accent4-color);
    text-align: center;
    border: 1px solid black;
    width: 100%;
}

.architect-cards h3 {
    padding: 10px;
    font-size: 2rem;
    color: var(--accent2-color);
}

.slide-left {
    animation-duration: 2s;
    animation-name: slidein-left;
}

.slide-right {
    animation-duration: 2s;
    animation-name: slidein-right;
}

@keyframes slidein-left {
    from {
        transform: translateX(-100%)
    }

    to {
        transform: translateX(0)
    }
}

@keyframes slidein-right {
    from {
        transform: translateX(100%)
    }

    to {
        transform: translateX(0)
    }
}

.architect-cards h2 {
    padding-top: 20px;
    font-size: 2rem;
}

.architect-cards button {
    margin: 10px;
    padding-left: 60px;
    padding-right: 60px;
    padding-top: 15px;
    padding-bottom: 30px;
    background-color: var(--accent1-color);
    border: none;
    border-radius: 20px;
    width: fit-content;
    font-size: 1.5rem;
}

/* Architect DIalogs */

dialog {
    width: 90%;
    max-width: 600px;
    background-color: var(--primary-color);
    border: none;
    border-radius: .25rem;
    box-shadow: 0 0 3rem #777;
    margin: auto;
    padding: 0;
    color: var(--accent3-color);
}

dialog h3 {
    margin: 0;
    padding: 15px;
}

dialog p {
    color: black;
    margin-top: 0;
    padding: 1rem;
    font-family: var(--body-font);
}

dialog ul {
    color: black;
    padding-left: 3rem;
    padding-bottom: 2rem;
    padding-top: 1rem;
}

dialog[open] {
    animation: fadein 0.5s ease-in-out;
}

@keyframes fadein {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

dialog::backdrop {
    background-color: rgb(0, 0, 0, .5);
}

dialog button {
    background-color: var(--primary-color);
    color: var(--accent3-color);
    position: absolute;
    top: .2rem;
    right: .7rem;
    padding: .5rem 1rem;
    border: none;
    margin: 0;
    padding-right: 10px;
    font-size: 1.75rem;
}

.wireframes {
    grid-column: 1/3;

}

.largeframe {
    width: 600px;
    height: auto;
}

.smallframe {
    max-height: 600px;
    width: auto;
}

